# meanr

./: .Rbuildignore  .gitignore  .travis.yml  ChangeLog  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md  cleanup  configure  configure.ac
R/: meanr-package.r  meanr.nthreads.r  meanr.r  score.r
inst/: CITATION
inst/sexputils/: RNACI.h  reactor.h  safeomp.h
man/: meanr-package.Rd  meanr.nthreads.Rd  score.Rd
src/: .clang_complete  Makevars  Makevars.in  get_score.c  global.c  meanr_native.c  meanr_nthreads.c  neg.c  pos.c  score.c
src/gperf/: neghash.h  poshash.h  sentiment.h
src/hashtable/: neghash.h  poshash.h
src/hashtable/maker/: NOTES.txt  make2tables.sh  makehash.sh  makewords.sh  words.txt
src/include/: RNACI.h
tests/: degenerate_cases.r  score.r
